--- a/SbrConsoleProj/SbrConsoleProj.csproj
+++ b/SbrConsoleProj/SbrConsoleProj.csproj
@@ -47,9 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MonitoredSerialPort.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Radiometre.cs" />
+    <Compile Include="SerialPortManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
